--- a/style.css
+++ b/style.css
@@ -160,12 +160,30 @@ a:visited {
 
   text-decoration: none;
 }
+.discounted {
+  position: relative;
+}
 
-.sold_out {
-  font-size: 100%;
-  display: grid;
+.twist {
+  display: none;
+}
+
+.udsalg {
   background-color: rgb(255, 122, 110);
-  text-align: center;
+  position: absolute;
+  padding: 0.5em;
+  margin-top: 2em;
+}
+
+article.udsalg .udsalg {
+  display: block;
+}
+
+.soldOut::after {
+  background-color: rgb(255, 122, 110);
+  position: absolute;
+  padding: 0.5em;
+  margin-top: 2em;
 }
 
 /************ grids ************/
@@ -180,6 +198,7 @@ a:visited {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   gap: 5%;
+  position: relative;
 }
 
 .grid_1-1 {
